<resources>
    <string name="app_name">Незламна</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_title_about">Про фільм</string>
    <string name="drawer_title_trailers">Трейлери</string>
    <string name="drawer_title_shots">Кадри та постери</string>
    <string name="drawer_title_team">Знімальна група</string>
    <string name="biography">БІОГРАФІЯ</string>
    <string name="biography_text">"Людмила Михайлівна Павличенко (1916-1974) - снайпер 25-ї стрілецької дивізії, майор, Герой Радянського Союзу, людина унікальної долі.
Найуспішніша жінка-снайпер у світовій історії, вона мала на своєму рахунку 309 знищених німецьких солдатів, з них - 36 снайперів. Таких результатів відважна жінка досягла менш ніж за рік війни.
Війна застала  Людмилу на дипломній практиці в Одесі. Не роздумуючи, Людмила пішла добровольцем на фронт. Бойове хрещення вона прийняла там же, під Одесою, у серпні 41-го. В одному з боїв було вбито її командира взводу і Людмила взяла командування на себе. Незважаючи на отриману в тому бою контузію, вона продовжила воювати.
У жовтні 1941 році її підрозділ направили до  Криму. 250 діб вона билася в Севастополі, збільшивши свій особистий рахунок знищених ворогів майже удвічі.
У березні 1942 року відбувся зліт снайперів, на якому виступала і Людмила, яка мала на той час на своєму рахунку 259 знищених фашистів. Вона зобов'язалася довести кількість убитих ворогів до 300, і за неповних 4 місяці досягла результату.
Тоді ж, у березні, під час напруженого поєдинку, Людмилі вдалося знищити німецького снайпера, на рахунку якого було близько 500 вбитих солдатів і офіцерів.
Після важкого поранення в середині червня 42-го, Людмила була евакуйована, але це поранення, можливо, врятувало їй життя - менше ніж через місяць Севастополь впав, і майже усі його захисники, залишені командуванням напризволяще, загинули.
Після лікування Людмилу направили з делегацією у Сполучені Штати Америки -  радянському керівництву дуже важливо було звернути увагу західної громадськості на війну з Німеччиною, щоб змусити союзників відкрити другий фронт, або хоч  надати СРСР дієву допомогу.
Під час поїздки Павличенко була на прийомі у Президента США Франкліна Рузвельта. Згодом, Елеонора Рузвельт запросила Людмилу в поїздку по країні і вони стали добрими подругами.
Людмила виступала у Вашингтоні, Нью-Йорку, але найзнаменитішим став її виступ у Чикаго, де вона дуже різко звернулася до присутніх : “Джентльмени! Мені двадцять п'ять років. На фронті я вже встигла знищити триста дев'ять фашистів. Чи не здається вам, джентльмени, що ви занадто довго ховаєтеся за моєю спиною?!” Натовп завмер на хвилину, а потім вибухнув оплесками - зухвала дівчина сподобалася американцям. Згодом американський співак  Вуді Гатрі навіть написав про Людмилу  пісню “Miss Pavlichenko”.
Можливо, саме після знайомства з Павличенко, в Елеонори Рузвельт народився відомий вираз: “Жінка - як чайний пакетик. Ніколи не дізнаєшся, наскільки міцною вона може виявитися, поки вона не опиниться в окропі”.
Повернувшись з фронту майор Павличенко працювала інструктором в снайперській школі “Постріл”, де навчала молодь здобутим під час війни навичкам.
Після війни в 1945 році Людмила Михайлівна все таки закінчила Київський університет і отримала диплом. З 1945 по 1953 рік була науковим співробітником Головного штабу ВМФ. Померла 27 жовтня 1974 року в Москві, де і похована.
"</string>
    <string name="gallery">ФОТОГАЛЕРЕЯ</string>
    <string name="about_snipers_title">ПРО СНАЙПЕРСЬКІЙ РУХ</string>
    <string name="about_snipers">"Слово “снайпер”, яке вперше з'явилося в англійській армії під час Першої світової війни, походить від англ. snipe - “бекас” (дрібний і швидкий птах, полювання на якого є дуже складним). Спочатку це слово мало дещо іронічний відтінок.

На Першу світову війну, з її окопами, що простягнулися на тисячі кілометрів, припав справжній розквіт снайперського руху. Німці в цей час беззастережно домінували - до кінця першого року війни в німецьких військах було понад 20 000 снайперських рушниць.
Але перед Другою світовою командування Вермахту, покладаючись на швидкий наступ та удари танкових армад, не приділяло особливої уваги розвитку снайперського руху.
У СРСР же навпаки, стрілецьким видам спорту і підготовці снайперів приділяли значну увагу. В 1929 році на курсах “Постріл”  був створений снайперський курс, де готувалися снайпери і керівники снайперської справи. Пізніше підготовкою снайперів займалися спеціальні курси ОСОВОАХІМу та військові частини. У 1932 році почався бурхливий розвиток стрілецького спорту і було введено звання “Ворошиловский стрілок”.
З 1942 р. навчання снайперів було організоване на курсах і школах снайперів Всевобуча, а з 43-го для навчання жінок-снайперів була відкрита окрема Моск
овська центральна жіноча школа снайперської підготовки.
Особливістю снайперського руху в СРСР в роки війни, на відміну від інших країн, було досить широке залучення жінок - серед радянських снайперів було понад тисячу жінок, які за час війни знищили понад 12 000 нацистів. Найрезультативнішою жінкою-снайпером вважається Людмила Михайлівна Павличенко.
"</string>
    <string name="snipers_gun_title">СНАЙПЕРСКІ РУШНИЦІ</string>
    <string name="snipers_gun_1">"7,62-мм (3-лінійна) рушниця зразка 1891 року (рушниця Мосина, трьохлінійка) - магазинна рушниця, взята на озброєння російської імператорської армії у 1891 році.
Активно використовувалася в період з 1891 до кінця Другої світової війни, в цей період багаторазово модернізувалася.
Назва трьохлінійка походить від калібру ствола рушниці, який дорівнює трьом  лініям (стара руська міра довжини, рівна одній десятій дюйма, або 2,54 мм - відповідно, три лінії дорівнюють 7,62 мм).
У 1932 році почалося серійне виробництво снайперської рушниці на базі трьохлінійки, що відрізнялася поліпшеною якістю обробки каналу ствола, наявністю 3,5-кратного оптичного прицілу ПУ (приціл укорочений).
Снайперські рушниці Мосина довоєнного виробництва відрізнялися відмінною якістю бою, багато в чому завдяки стволу з чоком (звуженням каналу до дульного зрізу), з різницею в діаметрах у казенної і дульної частин у 2-3%. При пострілі з такого ствола куля додатково стискається, що не дозволяє їй “гуляти” каналом ствола.
За низкою характеристик снайперська трьохлінійка є на рівні деяких сучасних зразків снайперської зброї, а за деякими параметрами - краща . Так, відносно сучасна СВД за кучністю бою поступається снайперській мосинці.
Загалом було випущено 108 345 шт. снайперських рушниць, вони інтенсивно використовувалися під час радянсько-фінської і Другої світової війни і зарекомендували себе як надійна і ефективна зброя. Нині снайперські рушниці Мосина становлять колекційну цінність.
Після виходу фільму “Ворог біля воріт” у США стрімко зріс попит на снайперські трьохлінійки. Як виявилося, ці рушниці у величезній кількості зберігалися на українських військових складах, і тисячі з них, замість запланованої утилізації, вона з’явилася на американському ринку зброї. Через брак оптичних прицілів їх довелося замовляти на підприємствах ВПК України.
Таким чином, саме снайперська  рушниця Мосина стала найпопулярнішою зброєю радянських снайперів.

"</string>
    <string name="snipers_gun_2">"Випущена незадовго до війни самозарядна рушниця Токарева СВТ-40 також виготовлялася у снайперському варіанті. Правда, виявилося що кучність і ефективна дальність стрільби цієї рушниці була суттєво нижчою, аніж у знаменитої трьохлінійки, і від її використання в снайперському варіанті поступово відмовилися.
В той же час, Людмила Павличенко все ж використовувала СВТ-40 разом із трьохлінійкою - автоматична перезарядка  дозволяла швидко добити пораненого супротивника другим пострілом.
Варто зауважити, що наявність в радянській армії самозарядної рушниці стала несподіванкою для німців - у них подібна зброя з'явилася набагато пізніше. Фіни і німці дуже цінували трофейні СВТ, а німці навіть прийняли цю рушницю як зброю обмеженого стандарту.
Радянські снайпери, передусім знаменитий Василь Зайцев, робили спроби створити снайперські рушниці на базі протитанкових рушниць - вони стали прообразами сучасних снайперських рушниць великого калібру."</string>
    <string name="snipers_gun_3">"У німецькій армії в 1930-1940 роки в якості снайперської використовувалася 7,92-мм рушниця Маузера зразка 1935 року (К98) з 1,5-кратним або чотирикратним прицілом. Цікаво, що карабін К98, як і трьохлінійка, виявився довгожителем. Досі він, після адаптації під вітчизняний боєприпас, на пострадянському просторі  продається під позначкою “КО-08” як мисливський карабін.
"</string>
    <string name="snipers_gun_4">"З 1943 року Вермахт почав застосовувати самозарядний карабін системи Вальтера (G43) з чотирикратним прицілом, проте у зв'язку з недостатньою надійністю і низькою точністю “вальтер” не користувався популярністю у вермахті - так само як і СВТ в радянській армії.
\n\nТаким чином, за своїми основними бойовими якостями німецькі снайперські рушниці не особливо відрізнялося від радянських, так що в плані озброєння, сили сторін були приблизно рівні.
Цікаво, що деякі німецькі снайпери використовували трофейні радянські снайперські рушниці.
"</string>
    <string name="start_tender">Почали</string>
    <string name="refuse_tender">Іншим разом</string>
    <string name="about_tender">«На цій сторінці ви можете взяти участь у конкурсі проекту НЕЗЛАМНА та, відповівши на три запитання по фільму «Незламна», виграти новий крутий мобільний девайс*!

\n<b>Умови конкурсу</b>

Вам буде запропоновано три легкі запитання, на які ви зможете дати відповіді, подивившись фільм «Незламна» або ознайомившись із мобільним додатком НЕЗЛАМНА.

Після відповідей на ці запитання ви зможете розмістити пост про участь у конкурсі на вашій сторінці у Facebook чи VK, щоб і ваші друзі також мали змогу взяти в ньому участь.

Спершу після відповіді на всі запитання ви маєте увійти у свій акаунт у Facebook чи VK. Одночасно ви реєструєтеся на нашому сервері як учасник розіграшу призу!

Реєструючись на нашому сервері, ви одночасно надаєте нам дозвіл на зберігання на сервері необхідної контактної інформації з вашого акаунту — адреси вашої електронної пошти, номеру мобільного телефону тощо. Ці дані нам потрібні для того, щоб сповістити вас про результати розіграшу.

Ми будемо обов’язково вас інформувати про перебіг конкурсу та інші важливі події. Сам розіграш призу буде проводитися випадковим визначенням переможця серед усіх учасників, хто правильно відповів на запитання та запостив інформацію на своїй сторінці у Facebook чи VK.

Не засмучуйтеся, якщо ви неправильно відповіли на якесь питання — проходити конкурс ви можете скільки завгодно разів (звісно, до моменту розіграшу приза). Вам достатньо лише один раз правильно відповісти на всі питання і ви будете серед претендентів на отримання призу!

Про те, чи правильно ви відповіли на питання конкурсу, ви дізнаєтеся відразу після того, як відповісте на всі три запитання і розмістите пост на сторінці свого акаунта у Facebook чи VK.

А для того, хто, пройшовши конкурс, розмістить максимальну кількість постів про фільм «Незламна» на своїй сторінці у Facebook чи VK, чекає окремий сюрприз!

Уважно дивіться фільм «Незламна» та вигравайте приз!

Хай Вам посміхнеться удача!

Більше про фільм ви дізнаєтеся, відвідавши фільм, а також завітавши на наші сторінки в соціальних мережах.

<b>Сайт фільму: www.nezlamna.com</b>\n
<b>Сторінка FB: www.facebook.com/nezlamna</b>\n
<b>Сторінка VK: vk.com/nezlamna </b>\n

* приз переможець обирає собі сам - можна вибрати будь яку модель мобільного телефону або планшету вартістю не вище 1000 у.о. Apple не має відношення до даного конкурсу і не є його спонсором.
"
</string>
    <string name="action_sign_in_short">Sign in with VK</string>
    <string name="share_fb">Поділитися з FB</string>
    <string name="share_fb_btn">Поділитися з VK</string>
</resources>