<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="64dp">

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:textColor="@color/text_primary"
            android:linksClickable="true"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/about_tender"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColorLink="@color/primary"
            />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/refuse_tender"
            android:textAllCaps="true"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@drawable/btn_selector"
            android:layout_weight="1"
            android:text="@string/start_tender"
            android:textAllCaps="true"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</FrameLayout>