    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/horizontal_padding"
    android:paddingRight="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    android:background="@color/background"
    tools:context="com.mozidev.kino.fragments.ArticleFragment"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                style="@style/TextViewHistoryTitle"
                android:text="@string/snipers_gun_title"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/item_divider"/>
            <TextView
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/text_primary"
                android:text="Винтовка Мосина"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/mosinka"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/snipers_gun_1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/text_primary"
                />
            <TextView
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary"
                android:text="СВТ-40"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/svt_snipe"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/snipers_gun_2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/text_primary"
                />
            <TextView
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary"
                android:text="Mauser 98k"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/k98_1"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/snipers_gun_3"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/text_primary"
                />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary"
                android:text="Gewehr 43"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/g43_1"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/snipers_gun_4"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/text_primary"
                />

        </LinearLayout>
    </ScrollView>
